[package]
name = "ps-memory-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
rppal = "0.13.1"
clap = "3.1.14"
indicatif = "0.16.2"
num-traits = "0.2.14"
num-derive = "0.3.3"
log = "0.4.16"
env_logger = "0.9.0"
